Changes reflected working on roles

--- a/templates/quotation/quotation_create_form.html
+++ b/templates/quotation/quotation_create_form.html
@@ -93,8 +93,8 @@
 
 
 <div class="form-row"  >
-<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add and Select Employees">
-Employees <i data-toggle="modal" data-target="#exampleModalCenter1" class="feather icon-plus-circle" data-toggle="tooltip" data-placement="top" title="Add Customer"></i> {% render_field form.customer id="customer"  class="js-example-basic-single" %}
+<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add and Select Users">
+Users <i data-toggle="modal" data-target="#exampleModalCenter1" class="feather icon-plus-circle" data-toggle="tooltip" data-placement="top" title="Add Customer"></i> {% render_field form.customer id="customer"  class="js-example-basic-single" %}
 </div>
 
 
@@ -109,11 +109,11 @@ Type of task <i class="fa fa-car" aria-hidden="true"></i> {% render_field form.m
 
 <br />
 <div class="form-row">
-<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Select Regularities">
+<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Select Task">
 Task Type <i class="fa fa-list" aria-hidden="true"></i> {% render_field form.quotation_type  class="js-example-basic-single" style="height:37px"  %}
 </div>
 
-<div class="col" data-toggle="tooltip" data-placement="left" title="Enter Airport of Origin" style="margin-left:80px;">
+<div class="col" data-toggle="tooltip" data-placement="left" title="Enter Remarks" style="margin-left:80px;">
 Remark <i class="fa fa-plane" aria-hidden="true"></i>{% render_field form.airport_of_origin class="form-control col-md-10" style="height:37px" placeholder="Enter Remarks " %}
 </div>
 
