--- a/templates/dashboard1.html
+++ b/templates/dashboard1.html
@@ -80,9 +80,6 @@
 
 
 
-    <!-- <a href="{% url 'roles' %}" style="height: 36px; width: 96px;" class="btn btn-success">Add Roles</a>
-    <a href="{% url 'quotation-create' %}" style="height: 36px; width: 120px;" class="btn btn-success">Add Quotation</a>
-    <a href="{% url 'user' %}" style="height: 36px; width: 96px;" class="btn btn-success">Add User</a> -->
 
     </div>
     <div class="col-3 text-right">
@@ -100,7 +97,7 @@
     <div class="row align-items-center">
     <div class="col-8">
     <h4 class="text-c-green f-w-600">{{job_count}}</h4>
-    <h6 class="text-muted m-b-0">Total Jobs Created </h6>
+    <h6 class="text-muted m-b-0">Total Leave Created </h6>
     </div>
     <div class="col-4 text-right">
     <i class="feather icon-file-text f-28"></i>
@@ -110,9 +107,9 @@
     <div class="card-footer bg-c-green" >
     <div class="row align-items-center">
     <div class="col-9">
-    <a href="{% url 'job-begin' %}" class="text-white">
+    <a href="{% url 'create_leave' %}" class="text-white">
 
-    <i class="feather icon-plus-circle"> Add Job</i>
+    <i class="feather icon-plus-circle"> Add Leave</i>
     </a>
 
 
