--- a/templates/quotation/quotation_update_form.html
+++ b/templates/quotation/quotation_update_form.html
@@ -93,8 +93,8 @@
 
 
 <div class="form-row"  >
-<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add and Select Employees">
-Employees <i data-toggle="modal" data-target="#exampleModalCenter1" class="feather icon-plus-circle" data-toggle="tooltip" data-placement="top" title="Add Customer"></i> {% render_field form.customer id="customer"  class="js-example-basic-single" %}
+<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add and Select Users">
+Users <i data-toggle="modal" data-target="#exampleModalCenter1" class="feather icon-plus-circle" data-toggle="tooltip" data-placement="top" title="Add Customer"></i> {% render_field form.customer id="customer"  class="js-example-basic-single" %}
 </div>
 
 
@@ -109,54 +109,16 @@ Type of task <i class="fa fa-car" aria-hidden="true"></i> {% render_field form.m
 
 <br />
 <div class="form-row">
-<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Select Regularities">
+<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Select Task">
 Task Type <i class="fa fa-list" aria-hidden="true"></i> {% render_field form.quotation_type  class="js-example-basic-single" style="height:37px"  %}
 </div>
 
-<div class="col" data-toggle="tooltip" data-placement="left" title="Enter Airport of Origin" style="margin-left:80px;">
+<div class="col" data-toggle="tooltip" data-placement="left" title="Enter Remarks" style="margin-left:80px;">
 Remark <i class="fa fa-plane" aria-hidden="true"></i>{% render_field form.airport_of_origin class="form-control col-md-10" style="height:37px" placeholder="Enter Remarks " %}
 </div>
 
 </div>
 
-<!--<div class="form-row">-->
-<!--<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Enter Airport of Destination">-->
-<!--    Airport Destination <i class="fa fa-plane" aria-hidden="true"></i> {% render_field form.airport_of_destination  class="form-control" placeholder="Enter airport of destination" style="height:37px"  %}-->
-<!--</div>-->
-
-<!--<div class="col" data-toggle="tooltip" data-placement="left" title="Enter No. of Pieces" style="margin-left:80px;">-->
-<!--Pieces <i class="fa fa-list" aria-hidden="true"></i>{% render_field form.no_of_shipment class="form-control col-md-10" style="height:37px" type="number" placeholder="Enter number of pieces" %}-->
-<!--</div>-->
-
-<!--</div>-->
-
-
-
-
-<!--<div class="form-row">-->
-<!--    <div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Enter Weight in KG">-->
-<!--        Weight of Shipment <i class="fa fa-weight" aria-hidden="true"></i> {% render_field form.weights_of_shipment  class="form-control" placeholder="Enter Weight of Shipment" type="number" style="height:37px"  %}-->
-<!--    </div>-->
-<!--    -->
-<!--    <div class="col" data-toggle="tooltip" data-placement="left" title="Enter AMS Fee" style="margin-left:80px;">-->
-<!--     AMS Fee <i class="fa fa-envelope" aria-hidden="true"></i>{% render_field form.ams_fee class="form-control col-md-10" style="height:37px" placeholder="Enter AMS fee" %}-->
-<!--    </div>-->
-
-<!--    </div>-->
-
-
-
-<!--<br />-->
-<!--<div class="form-row">-->
-<!--    <div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add Quotation Routine">-->
-<!--        Quotation Routine <i class="fa fa-calendar" aria-hidden="true"></i> {% render_field form.routine  class="form-control" placeholder="Enter Quotation Routine" style="height:37px"  %}-->
-<!--    </div>-->
-<!--    -->
-<!--    <div class="col" data-toggle="tooltip" data-placement="left" title="Add Payments Terms" style="margin-left:80px;">-->
-<!--     Payment Terms <i class="fa fa-credit-card" aria-hidden="true"></i>{% render_field form.payment_terms class="form-control col-md-10" style="height:37px" placeholder="Enter payment terms" %}-->
-<!--    </div>-->
-<!--    -->
-<!--    </div>-->
 
 
 
@@ -190,20 +152,6 @@ Remark <i class="fa fa-plane" aria-hidden="true"></i>{% render_field form.airpor
 <!--</div>-->
 
 <br>
-<div class="form-row">
-<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add Payment Terms in hours">
-Payment Terms <i class="fa fa-truck" aria-hidden="true"></i> {% render_field form.payment_terms class="form-control" style="height:37px" placeholder="Payment Terms /hr " %}
-</div>
-
-
-
-
-<div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add Work of Scope" style="left:83px;">
-    Work of Scope <i data-toggle="modal" data-target="#exampleModalCenter" class="feather icon-plus-circle"></i>
-{% render_field form.work_of_scope class="js-example-basic-multiple "  multiple="multiple" style="margin-left:20px;" style="height:37px"  %}
-
-
-</div>
 
 
 
@@ -211,13 +159,14 @@ Payment Terms <i class="fa fa-truck" aria-hidden="true"></i> {% render_field for
 
 
 
-</div>
+
+
+
+
 <br>
 
 
-<div class="form-row">
 
-</div>
 
 
 
@@ -239,8 +188,6 @@ Payment Terms <i class="fa fa-truck" aria-hidden="true"></i> {% render_field for
 
 
 
-</div>
-</div>
 
 </form>
 
