--- a/templates/dashboard1.html
+++ b/templates/dashboard1.html
@@ -1,3 +1,5 @@
+
+
 {% extends 'system/base.html' %} {% block content %} {% load static %}
 
 {% include 'system/messages.html' %}
@@ -66,7 +68,7 @@
     <h6 class="text-muted m-b-0">Total Employee's Created </h6>
     </div>
     <div class="col-4 text-right">
-    <i class="feather icon-file-text f-28"></i>
+    <i class="fas fa-users f-28"></i>
     </div>
     </div>
     </div>
@@ -100,7 +102,7 @@
     <h6 class="text-muted m-b-0">Total Leave Created </h6>
     </div>
     <div class="col-4 text-right">
-    <i class="feather icon-file-text f-28"></i>
+    <i class="far fa-newspaper f-28"></i>
     </div>
     </div>
     </div>
@@ -136,7 +138,7 @@
     </div>
 
     <div class="col-4 text-right">
-    <i class="feather icon-calendar f-28"></i>
+    <i class="fas fa-tasks f-28"></i>
     </div>
     </div>
     </div>
@@ -165,7 +167,7 @@
     <h6 class="text-muted m-b-0">Total Task Email Sent</h6>
     </div>
     <div class="col-4 text-right">
-    <i class="feather icon-download f-28"></i>
+    <i class="far fa-envelope f-28"></i>
     </div>
     </div>
     </div>
@@ -375,58 +377,6 @@ $(window).on('load',function(){
 
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <!-- Warning Section Starts -->
-    <!-- Older IE warning message -->
-    <!--[if lt IE 10]>
-    <div class="ie-warning">
-    <h1>Warning!!</h1>
-    <p>
-    You are using an outdated version of Internet Explorer, please upgrade
-    <br />to any of the following web browsers to access this website.
-    </p>
-    <div class="iew-container">
-    <ul class="iew-download">
-    <li>
-    <a href="http://www.google.com/chrome/">
-    <img
-    src="../files/assets/images/browser/chrome.png"
-    alt="Chrome"
-    />
-    <div>Chrome</div>
-    </a>
-    </li>
-    <li>
-    <a href="https://www.mozilla.org/en-US/firefox/new/">
-    <img src="../files/assets/images/browser/firefox.png" alt="Firefox" />
-    <div>Firefox</div>
-    </a>
-    </li>
-    <li>
-    <a href="http://www.opera.com">
-    <img src="../files/assets/images/browser/opera.png" alt="Opera" />
-    <div>Opera</div>
-    </a>
-    </li>
-    <li>
-    <a href="https://www.apple.com/safari/">
-    <img src="../files/assets/images/browser/safari.png" alt="Safari" />
-    <div>Safari</div>
-    </a>
-    </li>
-    <li>
-    <a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">
-    <img src="../files/assets/images/browser/ie.png" alt="" />
-    <div>IE (9 & above)</div>
-    </a>
-    </li>
-    </ul>
-    </div>
-    <p>Sorry for the inconvenience!</p>
-    </div>
-    <![endif]-->
-    <!-- Warning Section Ends -->
-    <!-- Required Jquery -->
 
     {%  endblock %}
     </body>
