--- a/templates/payroll/create_attendance.html
+++ b/templates/payroll/create_attendance.html
@@ -82,7 +82,7 @@
                                             <div class="card" style="width: 1000px;">
                                                 <div class="card-block caption-breadcrumb">
                                                     <div class="breadcrumb-header">
-                                                        <h5 class="font-weight-bold mb-3">Clock In  <i class="fa fa-shopping-cart" aria-hidden="true"></i></h5>
+                                                        <h5 class="font-weight-bold mb-3">Clock In  <i class="fas fa-user-clock" aria-hidden="true"></i></h5>
                                                         <span style="opacity: 0.6;">Once You clock in ,You will be present for the day</span>
                                                     </div>
                                                     <div class="page-header-breadcrumb">
