--- a/templates/payroll/leave.list.html
+++ b/templates/payroll/leave.list.html
@@ -52,7 +52,7 @@
 <div class="card-block caption-breadcrumb">
 <div class="breadcrumb-header">
 <h5>Leave  List <i class="fa fa-book" aria-hidden="true"></i></h5>
-<span style="opacity: 0.6;">Job Bookings created by users are listed down</span>
+<span style="opacity: 0.6;">Leave requests created by users are listed down</span>
 </div>
 
 <div class="page-header-breadcrumb">
