--- a/templates/payroll/list_attendance.html
+++ b/templates/payroll/list_attendance.html
@@ -60,7 +60,7 @@
 <li class="breadcrumb-item">
 <a href="{% url 'dashboard' %} " data-toggle="tooltip" data-placement="top" title="Go to homepage"> <i class="feather icon-home"></i> </a>
 </li>
-<li class="breadcrumb-item"><a href="">Clock In </a>
+<li class="breadcrumb-item"><a href="{% url 'create_attendance' %}">Clock In </a>
 </li>
 
 
