--- a/templates/quotation/quotation_detail.html
+++ b/templates/quotation/quotation_detail.html
@@ -107,7 +107,7 @@
                 <hr />
                 <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
                   <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
-                    Select Regularities
+                    Task Type
              </span>
 
                   <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{quotation.quotation_type}}
@@ -151,7 +151,7 @@ Remarks                  </span>
 <!--                  </span>-->
 <!--                </p>-->
 <!--                <hr />-->
-                <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
+ <!--               <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
                   <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
                     Task Scope
                   </span>
@@ -175,8 +175,8 @@ Remarks                  </span>
 <!--                  </span>-->
 <!--                  <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{quotation.routine}}-->
 <!--                  </span>-->
-<!--                </p>-->
-                <hr />
+<!--                </p>
+                <hr />-->
                 <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
                   <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
                     Time
@@ -193,14 +193,14 @@ Remarks                  </span>
                   </span>
                 </p>
                 <hr />
-                <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
+              <!--  <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
                   <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
                     Task Payment Terms
                   </span>
                   <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{quotation.payment_terms}}
                   </span>
                 </p>
-                <hr />
+                <hr />-->
                 <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
                   <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
                     Employee's Name
