--- a/templates/payroll/create_salary.html
+++ b/templates/payroll/create_salary.html
@@ -82,7 +82,7 @@
                                             <div class="card" style="width: 1000px;">
                                                 <div class="card-block caption-breadcrumb">
                                                     <div class="breadcrumb-header">
-                                                        <h5 class="font-weight-bold mb-3">Add Salary <i class="fa fa-shopping-cart" aria-hidden="true"></i></h5>
+                                                        <h5 class="font-weight-bold mb-3">Add Salary <i class="fas fa-money-bill-wave-alt" aria-hidden="true"></i></h5>
                                                         <span style="opacity: 0.6;">Once Salary  is added, it gets
                                                             listed in the Salary list</span>
                                                     </div>
