--- a/templates/payroll/leave_create.html
+++ b/templates/payroll/leave_create.html
@@ -82,7 +82,7 @@
                                             <div class="card" style="width: 1000px;">
                                                 <div class="card-block caption-breadcrumb">
                                                     <div class="breadcrumb-header">
-                                                        <h5 class="font-weight-bold mb-3">Add Leave <i class="fa fa-shopping-cart" aria-hidden="true"></i></h5>
+                                                        <h5 class="font-weight-bold mb-3">Add Leave <i class="fas fa-calendar-minus" aria-hidden="true"></i></h5>
                                                         <span style="opacity: 0.6;">Once the Leave is added, it gets
                                                             listed in the Leave  list</span>
                                                     </div>
