--- a/templates/quotation/quotation_create_form.html
+++ b/templates/quotation/quotation_create_form.html
@@ -94,13 +94,13 @@
 
 <div class="form-row"  >
 <div class="col-md-5" data-toggle="tooltip" data-placement="left" title="Add and Select Users">
-Users <i data-toggle="modal" data-target="#exampleModalCenter1" class="feather icon-plus-circle" data-toggle="tooltip" data-placement="top" title="Add Customer"></i> {% render_field form.customer id="customer"  class="js-example-basic-single" %}
+Users <i data-toggle="modal" data-target="#exampleModalCenter1" class="feather icon-plus-circle" data-toggle="tooltip" data-placement="top" title="Add Employee"></i> {% render_field form.customer id="customer"  class="js-example-basic-single" %}
 </div>
 
 
 
 <div class="col-md-5"  data-toggle="tooltip" data-placement="left" title="Select Task Type" style="margin-left:80px;">
-Type of task <i class="fa fa-car" aria-hidden="true"></i> {% render_field form.mode_of_transport class="js-example-basic-single"  %}
+Type of task <i class="fas fa-window-restore" aria-hidden="true"></i> {% render_field form.mode_of_transport class="js-example-basic-single"  %}
 </div>
 
 </div>
@@ -114,7 +114,7 @@ Task Type <i class="fa fa-list" aria-hidden="true"></i> {% render_field form.quo
 </div>
 
 <div class="col" data-toggle="tooltip" data-placement="left" title="Enter Remarks" style="margin-left:80px;">
-Remark <i class="fa fa-plane" aria-hidden="true"></i>{% render_field form.airport_of_origin class="form-control col-md-10" style="height:37px" placeholder="Enter Remarks " %}
+Remark <i class="far fa-comment-alt" aria-hidden="true"></i>{% render_field form.airport_of_origin class="form-control col-md-10" style="height:37px" placeholder="Enter Remarks " %}
 </div>
 
 </div>
@@ -208,7 +208,7 @@ Remark <i class="fa fa-plane" aria-hidden="true"></i>{% render_field form.airpor
 <div class="modal-dialog modal-dialog-centered" role="document">
 <div class="modal-content">
 <div class="modal-header">
-<h5 class="modal-title" id="exampleModalLongTitle1">Add Customers </h5>
+<h5 class="modal-title" id="exampleModalLongTitle1">Add Employee </h5>
 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 <span aria-hidden="true">&times;</span>
 </button>
