updated email templates

--- a/templates/email/email.template.html
+++ b/templates/email/email.template.html
@@ -37,23 +37,23 @@ class="float-left"
 
 
 
-Mode of Transport:
+Task Scope:
 </span>
 <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted text-warning"style="color:red;">{{mode_of_transport}}
 </span>
 </p>
 <hr />
-<p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
+<!--<p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
 <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
-Quotation Type:
+Task Type:
 </span>
 <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-warning"style="color:red;">{{type}}
 </span>
 </p>
-<hr />
+<hr />-->
 <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
 <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
-Quotation Number:
+Task Number:
 </span>
 <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-warning" style="color:red;">{{number}}
 </span>
@@ -61,14 +61,14 @@ Quotation Number:
 <hr />
 <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
 <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
-Airport of Origin:
+Remarks:
 </span>
 <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-warning"style="color:red;">
 {{airport_of_origin}}
 </span>
 </p>
 <hr />
-<p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
+<!--<p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
 <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
 Ams Fee:
 </span>
@@ -137,6 +137,7 @@ Routine:
 </span>
 </p>
 <hr />
+-->
 <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
 <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
 Time:
@@ -155,15 +156,7 @@ Date:
 <hr />
 <p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
 <span data-v-05b4f093="" data-v-b090a320="" class="float-left">
-Quotation Payment Terms:
-</span>
-<span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{payment_terms}}
-</span>
-</p>
-<hr />
-<p data-v-05b4f093="" data-v-b090a320="" class="clearfix">
-<span data-v-05b4f093="" data-v-b090a320="" class="float-left">
-Customer's Name:
+Employee's Name:
 </span>
 <span data-v-05b4f093="" data-v-b090a320="" class="float-right text-muted">{{customer_name}}
 </span>
@@ -180,14 +173,13 @@ Customer's Name:
 <br>
 <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-<b>SFL logistic</b>
-<p>Support Team</p>
+<b>Searchable Design</b>
+<p>Employee Management System</p>
 </td>
 </tr>
 
 <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 <td class="content-block" style="text-align: center;font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0;" valign="top">
-&copy; 2022 SFL World
 </td>
 </tr>
 </tbody></table>
