--- a/templates/quotation/quotation_results.html
+++ b/templates/quotation/quotation_results.html
@@ -117,7 +117,7 @@ Found {{ total_results }} result{{ total_results|pluralize }}<i class="feather i
 <th scope="col">Quotation No</th>
 <th scope="col">Commodity</th>
 <th scope="col">Total Weight</th>
-<th scope="col">Customer Name</th>
+<th scope="col">Employee Name</th>
 
 <th scope="col">Send Email</th>
 <th scope="col">View</th>
