--- a/templates/quotation/quotation_type_create_form.html
+++ b/templates/quotation/quotation_type_create_form.html
@@ -66,8 +66,8 @@
                                             <div class="card" style="width: 1000px;">
                                                 <div class="card-block caption-breadcrumb">
                                                     <div class="breadcrumb-header">
-                                                        <h5 class="font-weight-bold mb-4">Select Task Type <i class="fa fa-file" aria-hidden="true"></i></h5>
-                                                        <span style="opacity: 0.5;">   Once the type of Task type is added, it gets listed in the Task type list</span>
+                                                        <h5 class="font-weight-bold mb-4">Task Type <i class="fa fa-file" aria-hidden="true"></i></h5>
+                                                        <span style="opacity: 0.9;">   Once the type of Task type is added, it gets listed in the Task type list</span>
                                                     </div>
                                                     <div class="page-header-breadcrumb">
                                                         <ul class="breadcrumb-title">
