--- a/templates/payroll/bonus.html
+++ b/templates/payroll/bonus.html
@@ -60,7 +60,7 @@
 <li class="breadcrumb-item">
 <a href="{% url 'dashboard' %} " data-toggle="tooltip" data-placement="top" title="Go to homepage"> <i class="feather icon-home"></i> </a>
 </li>
-<li class="breadcrumb-item"><a href="">Manage Bonus Bookings</a>
+<li class="breadcrumb-item"><a href="">Manage Bonus</a>
 </li>
 
 
