--- a/templates/system/navbar.html
+++ b/templates/system/navbar.html
@@ -500,6 +500,11 @@ I'm just looking around. Will you tell me something about yourself?
                             <span class="pcoded-mtext hvr-grow">Attendance</span>
                         </a>
                     </li>
+                   <li>
+                        <a href="{% url 'list_attendance' %}">
+                            <span class="pcoded-mtext hvr-grow">Attendance List</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li class="pcoded-hasmenu">
